finish make mobilenet and yolo merge

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <p>
 <!--      <button id="toggleVideoEl">Hide Video</button>-->
       <button id="toggleDetectingEl">Start Detecting</button>
+
+        <label ><input type="checkbox" name="merge"> Merge</label>
     </p>
     <div class="container">
       <canvas id="canvas" style="max-width: 640px; max-height: 480px"></canvas>
