--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <button id="toggleDetectingEl">Start Detecting</button>
 
         <label ><input type="checkbox" name="merge"> Merge</label>
+        <label ><input type="checkbox" name="debug"> Debug</label>
     </p>
     <div class="container">
       <canvas id="canvas" style="max-width: 640px; max-height: 480px"></canvas>
